# cancer-reaserch

./: .gitignore  pyproject.toml  readme.md  summary.md
GliODIL/: README.md  requirements.txt
GliODIL/code/cases/GliODIL/: GliODIL.py  run_synthetic_generator3T.py  synthetic_generator.py
latex/: main.tex
results/ablation/: ablation_metrics.csv  ablation_summary.csv
results/assimilation_sweep/: assimilation_sweep_metrics.csv  assimilation_sweep_summary.csv
results/ensemble/: ensemble_metrics.csv  ensemble_summary.csv
results/improved_method/: improved_method_metrics.csv
results/param_search/: param_budget.csv  param_grid.csv
src/cancer_sim/: __init__.py  config.py  data.py  mechanistic.py  metrics.py  plotting.py  surrogates.py  training.py
src/cancer_sim/realdata/: README.md  __init__.py  fk3d.py  gliodil_io.py  to_surrogate.py
