[project]
name = "cancer-sim"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "filelock==3.29.4",
    "fonttools==4.63.0",
    "fsspec==2026.6.0",
    "jinja2==3.1.6",
    "kiwisolver==1.5.0",
    "markupsafe==3.0.3",
    "matplotlib==3.11.0",
    "mpmath==1.3.0",
    "networkx==3.6.1",
    "nibabel==5.4.2",
    "numpy==2.5.0",
    "packaging==26.2",
    "pillow==12.2.0",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "scipy==1.18.0",
    "setuptools==81.0.0",
    "six==1.17.0",
    "sympy==1.14.0",
    "torch==2.12.1",
    "typing-extensions==4.15.0",
]
